# TelemetryX

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  E10_Wave1_Performance_Verification.md  E7_Wave1_Announcement.md  Frontend_ArchitectureOverview.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_STRATEGY.md  README.md  REDIS_OPTIMIZATION_SUMMARY.md  REDIS_SETUP.md  TelemetryX.md  docker-compose.yml  dump.rdb  features_Catalog.md  final_test.py  nohup.out  package-lock.json  package.json  requirements.txt  rewrite.js  start.sh  test_api_curl.sh  tmp_geometry_report_method_b_ground_truth.json  trackMapRefactor.js  update-trackmap.sh  wave2_completion.txt
frontend/: README.md  index.html  instructions.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/app/: __init__.py  main.py
frontend/app/services/: __init__.py  backend_runner.py  bootstrap.py  playback_sync.py  strategy.py
frontend/public/: monaco_2024_simulation.json  monaco_2024_timing.json
frontend/scripts/: build.py
frontend/src/: App.tsx  index.css  main.tsx  theme.css
frontend/src/__tests__/: TelemetrySimpleTest.tsx
frontend/src/api/: client.ts  sessions.ts  websocket.ts
frontend/src/components/: AnimatedTrackMap.tsx  AuthGate.tsx  BoxPlotChart.tsx  DeltaTower.tsx  DriverHUD.tsx  DriverSummary.tsx  EmptyState.tsx  FeaturesLiteCharts.tsx  FpsPill.tsx  GlobalErrorBoundary.tsx  Header.tsx  LapComparison.tsx  Layout.tsx  LoadingSkeleton.tsx  LoadingStates.tsx  MultiDriverTelemetry.tsx  PaceAnalysis.tsx  PageWrapper.tsx  PlaybackBar.tsx  PositionTimeline.tsx  RaceControl.tsx  RaceControlFeed.tsx  RaceTrace.tsx  RenderBudgetPanel.tsx  SecurityModal.tsx  SessionPicker.tsx  Sidebar.tsx  SplashScreen.tsx  TelemetryChart.tsx  TelemetryControls.tsx  TelemetryHeader.tsx  TelemetryLegend.tsx  TimingTower.tsx  TopBar.tsx  TrackMap.tsx  TrackMap.tsx.bak_20260320_165009  UPlotChart.tsx  UndercutPredictor.tsx  WeatherPanel.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useCarPositions.ts  useCommon.ts  useDynamicTrackRenderer.ts  useFlashObserver.ts  usePerformanceMonitor.ts  usePlaybackCursor.ts  usePlaybackTick.ts  useStaticTrackRenderer.ts  useTelemetryData.ts  useTimingData.ts  useTimingData.ts.bak_20260320_165009  useTimingData.ts.bak_20260320_195200  useTrackData.ts  useTrackData.ts.bak_20260320_165009  useTrackViewport.ts  useWindowedPositions.ts
frontend/src/lib/: api.ts  cacheUtils.ts  dynamicAnimejs.ts  featuresUtils.ts  raceControlState.ts  telemetryUtils.ts  timeUtils.ts  trackGeometry.ts  trackGeometry.ts.bak_20260320_165009  trackRendering.ts  (+1 more)
frontend/tests/: conftest.py
(+965 files in other folders)
