[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetryx-desktop"
version = "0.1.0"
description = "Professional-grade F1 telemetry command center - Desktop Application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Qt Framework
    "PySide6>=6.7.0",
    
    # Charts & Visualization
    "PyQtGraph>=0.13.7",
    "PyOpenGL>=3.1.7",
    
    # Data & API
    "httpx[http2]>=0.27.0",
    "duckdb>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Async & Concurrency
    "qasync>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "typing-extensions>=4.8.0",
    "structlog>=24.1.0",
    "appdirs>=1.4.4",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

packaging = [
    "pyinstaller>=6.0.0",
    "nuitka>=2.0.0",
    "ordered-set>=4.1.0",
]

[project.scripts]
telemetryx = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "E203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
qt_api = "pyside6"
asyncio_mode = "auto"
